--- a/BossMod/BossMod.csproj
+++ b/BossMod/BossMod.csproj
@@ -32,6 +32,7 @@
 
   <ItemGroup>
     <PackageReference Include="DalamudPackager" Version="2.1.2" />
+    <PackageReference Include="SharpDX.Mathematics" Version="4.2.0" />
     <Reference Include="FFXIVClientStructs">
       <HintPath>$(DalamudLibPath)FFXIVClientStructs.dll</HintPath>
       <Private>false</Private>
