Tons of changes.

--- a/BossMod/BossMod.csproj
+++ b/BossMod/BossMod.csproj
@@ -24,6 +24,9 @@
     <Content Include="..\Data\bossMod.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="..\Data\modules\*.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
   <PropertyGroup>
