--- a/BossMod/BossMod.csproj
+++ b/BossMod/BossMod.csproj
@@ -36,7 +36,7 @@
   </ItemGroup>
 
   <PropertyGroup>
-    <DalamudLibPath>E:\sources\ff14\dalamud\Dalamud\bin\Debug\</DalamudLibPath>
+    <DalamudLibPath>$(appdata)\XIVLauncher\addon\Hooks\dev\</DalamudLibPath>
   </PropertyGroup>
 
   <ItemGroup>
