--- a/UIDev/UIDev.csproj
+++ b/UIDev/UIDev.csproj
@@ -54,5 +54,6 @@
 
   <ItemGroup>
     <PackageReference Include="ImGui.NET" Version="1.86.0" />
+    <PackageReference Include="Microsoft.Win32.Registry" Version="5.0.0" />
   </ItemGroup>
 </Project>
