Disposable event subcriptions + some more refactoring.

--- a/.editorconfig
+++ b/.editorconfig
@@ -29,6 +29,7 @@ dotnet_diagnostic.CA1000.severity = none # this feature (static members of gener
 dotnet_diagnostic.CA1002.severity = none # this is a particularly puzzling rule - for whatever reason, it disallows exposing List<>, which is perfectly fine
 dotnet_diagnostic.CA1003.severity = none # EventHandler sucks, it has useless first arg (sender) and requires wrapping multi arg payloads into a tuple, which is just annoying - and this rule promotes their use for events
 dotnet_diagnostic.CA1028.severity = none # enums that have unsigned underlying type are common and quite useful
+dotnet_diagnostic.CA1030.severity = none # we don't use standard events, so this is not relevant
 dotnet_diagnostic.CA1034.severity = none # nested public types are used widely, and I don't see a reason to avoid them
 dotnet_diagnostic.CA1043.severity = none # indexer by enum are used, don't see a reason to avoid thems
 dotnet_diagnostic.CA1051.severity = none # public fields are fine, no need to use properties everywhere
@@ -155,7 +156,7 @@ dotnet_style_prefer_inferred_tuple_names = true
 dotnet_style_prefer_inferred_anonymous_type_member_names = true
 dotnet_diagnostic.IDE0039.severity = warning # prefer local functions to lambdas
 csharp_style_prefer_local_over_anonymous_function = true
-dotnet_diagnostic.IDE0040.severity = suggestion # suggest accessibility modifiers everywhere except for interface members (TODO: reconsider severity and interfaces)
+dotnet_diagnostic.IDE0040.severity = silent # no strong preference for default accessibility modifiers (TODO: reconsider severity and interfaces)
 dotnet_style_require_accessibility_modifiers = for_non_interface_members
 dotnet_diagnostic.IDE0041.severity = warning # prefer is null checks
 dotnet_style_prefer_is_null_check_over_reference_equality_method = true
