--- a/BossMod/BossMod.csproj
+++ b/BossMod/BossMod.csproj
@@ -31,10 +31,14 @@
   <ItemGroup>
     <Using Include="System" />
     <Using Include="System.Collections" />
+    <Using Include="System.Collections.Concurrent" />
     <Using Include="System.Collections.Generic" />
     <Using Include="System.Collections.Immutable" />
     <Using Include="System.Linq" />
     <Using Include="System.Numerics" />
+    <Using Include="System.Security.Cryptography" />
+    <Using Include="System.Threading.Tasks;" />
+    <Using Include="System.Text" />
   </ItemGroup>
 
   <PropertyGroup>
