add default presets

--- a/BossMod/BossMod.csproj
+++ b/BossMod/BossMod.csproj
@@ -86,4 +86,10 @@
       <Private>false</Private>
     </Reference>
   </ItemGroup>
+
+  <ItemGroup>
+    <None Update="Autorotation\DefaultPresets.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
 </Project>
