--- a/BossMod/BossMod.csproj
+++ b/BossMod/BossMod.csproj
@@ -31,9 +31,11 @@
   <ItemGroup>
     <Using Include="System" />
     <Using Include="System.Collections" />
+    <Using Include="System.Collections.Concurrent" />
     <Using Include="System.Collections.Generic" />
     <Using Include="System.Collections.Immutable" />
     <Using Include="System.Linq" />
+    <Using Include="System.Threading.Tasks;" />
     <Using Include="System.Numerics" />
   </ItemGroup>
 
