--- a/BossMod/BossMod.csproj
+++ b/BossMod/BossMod.csproj
@@ -18,6 +18,7 @@
     <ProduceReferenceAssembly>false</ProduceReferenceAssembly>
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
     <RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
+	<CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
     <ReportAnalyzer>true</ReportAnalyzer>
   </PropertyGroup>
 
@@ -48,7 +49,8 @@
   <ItemGroup>
     <PackageReference Include="DalamudPackager" Version="11.0.0" />
     <PackageReference Include="SharpDX.Mathematics" Version="4.2.0" />
-    <ProjectReference Include="..\CodeAnalysis\CodeAnalysis.csproj">
+    <PackageReference Include="System.Data.Sqlite" Version="1.0.119" />
+	<ProjectReference Include="..\CodeAnalysis\CodeAnalysis.csproj">
       <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
       <OutputItemType>Analyzer</OutputItemType>
     </ProjectReference>
@@ -91,6 +93,7 @@
     <None Update="DefaultRotationPresets.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <EmbeddedResource Include="Modules\Global\DeepDungeon\*.json" />
   </ItemGroup>
 
   <ItemGroup Condition="'$(Configuration)' == 'Release'">
