--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,21 +1,14 @@
 {
+  // Use IntelliSense to learn about possible attributes.
+  // Hover to view descriptions of existing attributes.
+  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
   "configurations": [
     {
-      // Use IntelliSense to find out which attributes exist for C# debugging
-      // Use hover for the description of the existing attributes
-      // For further information visit https://github.com/dotnet/vscode-csharp/blob/main/debugger-launchjson.md
-      "name": ".NET Core Launch (console)",
-      "type": "coreclr",
+      "name": "C#: UIDev Debug",
+      "type": "dotnet",
       "request": "launch",
-      "preLaunchTask": "build",
-      // If you have changed target frameworks, make sure to update the program path.
-      "program": "${workspaceFolder}/UIDev/bin/Debug/net8.0-windows/UIDev.dll",
-      "args": [],
-      "cwd": "${workspaceFolder}/UIDev/bin/Debug/net8.0-windows",
-      // For more information about the 'console' field, see https://aka.ms/VSCode-CS-LaunchJson-Console
-      "console": "internalConsole",
-      "stopAtEntry": false
+      "projectPath": "${workspaceFolder}/UIDev/UIDev.csproj"
     }
   ]
 }
