--- a/UIDev/UIDev.csproj
+++ b/UIDev/UIDev.csproj
@@ -2,7 +2,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>net8.0-windows</TargetFramework>
-    <Platforms>x64</Platforms>
+    <Platforms>AnyCPU</Platforms>
     <Nullable>enable</Nullable>
     <OutputType>WinExe</OutputType>
     <LangVersion>preview</LangVersion>
@@ -69,6 +69,6 @@
   </ItemGroup>
 
   <Target Name="PostBuildScript" AfterTargets="Build">
-    <Copy SourceFiles="$(DalamudLibPath)cimgui.dll" DestinationFolder="$(OutputPath)"/>
+    <Copy SourceFiles="$(DalamudLibPath)cimgui.dll" DestinationFolder="$(OutputPath)" />
   </Target>
 </Project>
