--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "FFXIVClientStructs"]
 	path = FFXIVClientStructs
-	url = https://github.com/awgil/FFXIVClientStructs.git
+	url = https://github.com/xanunderscore/FFXIVClientStructs
