--- a/UIDev/UIDev.csproj
+++ b/UIDev/UIDev.csproj
@@ -43,6 +43,7 @@
     <Reference Include="Dalamud">
       <HintPath>$(DalamudLibPath)Dalamud.dll</HintPath>
     </Reference>
+	  <Reference Include=".\dep\ImGui.NET.dll" />
 	  <Reference Include=".\dep\ImGuiScene.dll" />
 	  <Reference Include=".\dep\SDL2-CS.dll" />
   </ItemGroup>
