fix uidev launch task

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -28,8 +28,7 @@
         "build",
         "${workspaceFolder}/UIDev/UIDev.csproj",
         "/property:GenerateFullPaths=true",
-        "/consoleloggerparameters:NoSummary;ForceNoAlign",
-        "/p:Platform=x64"
+        "/consoleloggerparameters:NoSummary;ForceNoAlign"
       ],
       "problemMatcher": "$msCompile"
     }
